--- a/src/views/errors/404.html
+++ b/src/views/errors/404.html
@@ -5,7 +5,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
-        <title>404 Not Found11</title>
+        <title>404 Not Found</title>
     </head>
     <body
         style="
